--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -12,7 +12,7 @@ linestretch: 1.6
 geometry: "left=3.9cm, right=3.3cm, top=2.5cm, bottom=3cm"
 papersize: a4
 bibliography: references.bib
-abstract: "`r paste0(readLines('abstract.md'), collapse = ' ')`"
+abstract: "`r paste0(c('\\\\noindent', readLines('abstract.md')), collapse = ' ')`"
 csl: apa.csl
 ---
 
