--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -48,19 +48,18 @@ If the research community remains confused about the purpose of preregistration,
 We thus propose a principled justification for preregistration with a formal objective against which researchers can evaluate several pragmatic trade-offs.
 
 The scientific community asserts that the objective of preregistration is to distinguish confirmatory from exploratory research [@mellorEasyPreregistrationWill2018; @nosekPreregistrationRevolution2018; @wagenmakersAgendaPurelyConfirmatory2012].
-Taken at face value, this objective implies that research is confirmatory if, and only if, it is preregistered. <!-- I dont think it does. I think it implies research can be 
+Taken at face value, this objective implies that research is confirmatory if, and only if, it is preregistered. <!-- This sounds too much like a strawman to me. I assume it implies more that research can be recognized as confirmatory. -->
 However, this postulate is not warranted.
 Researchers can conduct confirmatory research without preregistration, though it might be difficult to convince other researchers of the confirmatory nature of their research.
 The exact opposite, preregistered but not strictly confirmatory studies, are also commonplace [@dwanSystematicReviewEmpirical2008; @chanEmpiricalEvidenceSelective2004; @silagyPublishingProtocolsSystematic2002].
-Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations.
-One strategy is to write a loose preregistration to begin with [@stefanBigLittleLies2022]; another is to deviate from the preregistration afterwards.
+Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations: writing a loose preregistration to begin with [@stefanBigLittleLies2022] or deviating from the preregistration afterwards.
 Both strategies may be used with compelling scientific reasoning or with the self-serving intent of generating desirable results no matter what the nature of the phenomenon under study.
-Insisting on equating preregistration and confirmation has, hence, led to criticism that preregistration is actually harmful all things considered, and neither sufficient nor necessary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
+Thus, insisting on equating preregistration and confirmation has led to criticism that, all things considered, preregistration is actually harmful, and neither sufficient nor necessary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
 
-These issues arise from a fundamental confusion about the objective of preregistration.
-Researchers are bound to be confused when they delegate an important scientific judgment to a simple decision rule, that only takes into account the existence of a preregistration.
+These issues arise from a fundamental missunderstanding of the objective of preregistration.
+Researchers are bound to be misled when they delegate an important scientific judgment to a simple decision rule, that only takes into account the existence of a preregistration. <!-- I dont like "confused" -->
 Preregistering an inherently exploratory analysis (like testing dozens of relations) does not make it confirmatory, nor will a carefully conducted confirmatory study become exploratory if the researcher deviates from the preregistration in minor details.
-Equating confirmatory research with preregistered research is only possible for studies that expect a low type-I error rate and will run/be analyzed without in any case [@simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020].
+Equating confirmatory research with preregistered research is only possible for studies that expect a low type-I error rate and will run/be analyzed without in any case [@simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020]. <!-- I dont understand this sentence -->
 Under these conditions, the rule holds, but such restricted use makes preregistration a niche solution unable to match the greater problem of lacking replicability in psychology and elsewhere.
 
 We show that the simple decision rule is just a special case of a more general conceptualization under Bayesian reasoning. 
