--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -53,7 +53,7 @@ However, this postulate is not warranted.
 Researchers can conduct confirmatory research without preregistration, though it might be difficult to convince other researchers of the confirmatory nature of their research.
 The exact opposite, preregistered but not strictly confirmatory studies, are also commonplace [@dwanSystematicReviewEmpirical2008; @chanEmpiricalEvidenceSelective2004; @silagyPublishingProtocolsSystematic2002].
 Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations: writing a loose preregistration to begin with [@stefanBigLittleLies2022] or deviating from the preregistration afterwards.
-Both strategies may be used with compelling scientific reasoning or with the self-serving intent of generating desirable results no matter what the nature of the phenomenon under study.
+Both strategies may be used for sensible scientific reasons or with the self-serving intent of generating desirable results.
 Thus, insisting on equating preregistration and confirmation has led to criticism that, all things considered, preregistration is actually harmful, and neither sufficient nor necessary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
 
 These issues arise from a fundamental missunderstanding of the objective of preregistration.
@@ -63,18 +63,14 @@ Equating confirmatory research with preregistered research is only possible for 
 Under these conditions, the rule holds, but such restricted use makes preregistration a niche solution unable to match the greater problem of lacking replicability in psychology and elsewhere.
 
 We show that the simple decision rule is just a special case of a more general conceptualization under Bayesian reasoning. 
-To that end, we first introduce some tools of Bayesian philosophy of science and map the exploration/confirmation distinction onto a dimensional quantity we call "theoretical risk" [a term borrowed from @meehlTheoreticalRisksTabular1978, but formalized as the probability of proving a hypothesis wrong, if it does not hold], which is inversely related to the type-I error rate.
+To that end, we first introduce some tools of Bayesian philosophy of science and map the exploration/confirmation distinction onto a dimensional quantity we call "theoretical risk" [a term borrowed from @meehlTheoreticalRisksTabular1978, but formalized as the probability of proving a hypothesis wrong, if it does not hold], which is inversely related to the type-I error rate. <!-- why is it called theoretical risk when it is about proving a hypothesis wrong? -->
 
 We then outline two interpretations of how theoretical risk is impacted by preregistration.
 The first interpretation corresponds to the traditional application of preregistration to research paradigms that focus on confirmation by maximizing the theoretical risk or equivalently by limiting type-I error.
 The second interpretation is our main contribution and demonstrates the broad applicability of preregistration to both exploratory and confirmatory studies that are implemented as preregistered or have undergone changes after preregistration.
 Following this interpretation, the theoretical risk is not necessarily directly maximized by preregistration, but rather the uncertainty in judging the theoretical risk is minimized.
 
-To arrive at this interpretation, we rely on three arguments.
-The first is that theoretical risk is vital for judging evidential support for theories.
-The second argument is that the theoretical risk for a given study is generally uncertain.
-The third and last argument is that this uncertainty is reduced by applying preregistration.
-We conclude that because preregistration decreases uncertainty about the theoretical risk, which in turn increases our expectation to gain evidence for or against a theory, preregistration is warranted for any study.
+<!-- you don't rely on all of those, I would not state this here -->
 
 # Epistemic value and the Bayesian rationale
 
@@ -83,26 +79,9 @@ If researchers plan to conduct a study, they usually hope it will change their a
 In other words, they hope to learn something from conducting the study.
 The amount of knowledge researchers gain from a particular study concerning the verisimilitude of a specific theory (which itself is an ontologocial concept) is what we call epistemic value.
 Researchers cannot know what exactly they will learn from a study before they have run it.
-However, they can develop, they can form an expectation that helps them decide which study to conduct in what manner.
+However, they can develop an expectation that helps them to decide which study to conduct in what manner.
 This expectation is what we term expected epistemic value.
-To make our three arguments, we must assume three things about this estimation process and how it relates to what studies (preregistered vs not preregistered) to conduct.
-
-1. Researchers judge the evidence for or against a hypothesis rationally.
-2. They expect other researchers to apply the same rational process.
-2. All else being equal, researchers try to maximize the expected epistemic value for other researchers.
-
-The assumption of rationality can be connected to Bayesian reasoning and leads to our adoption of the framework.
-Our rationale is as follows.
-Researchers who decide to conduct a certain study are actually choosing a study to bet on.
-They have to "place the bet" by conducting the study, therefore, invest resources and stand to gain epistemic value with some probability.
-This conceptualization of choosing a study as a betting problem allows us to apply a "Dutch Book" argument [@christensenCleverBookiesCoherent1991].
-This argument states that any better must follow the axioms of probability to avoid being "irrational," i.e., accepting bets that lead to sure losses.
-Fully developing a Dutch book argument for this problem requires careful consideration of what kind of studies to include as possible bets, defining a conversion rate from the stakes to the reward, and modelling what liberties researchers have in what studies to conduct.
-Without deliberating these concepts further, we find it persuasive that researchers should not violate the axioms of probability if they have some expectation about what they stand to gain with some likelihood from conducting a study.
-The axioms of probability are sufficient to derive the Bayes formula, on which we will heavily rely for our further arguments.
-The argument is not sufficient, however, to warrant conceptualizing the kind of epistemic value we reason about in terms of probability; that remains a leap of faith.
-Please note that our decision to adopt this aspect of the Bayesian philosophy of science does not imply anything about the statistical methods researchers use.
-In fact, this conceptualization is intentionally reductionistic to be compatible with a wide range of philosophies of science and statistical methods researchers might subscribe to.
+<!-- not compelling, deleted -->
 
 # Epistemic value and theoretical risk
 
@@ -111,7 +90,7 @@ Put simply, risky predictions create persuasive evidence if they turn out to be 
 This point is crucial because we attribute much of the appeal of preregistration to this fact.
 
 Let us make some simplifying assumptions and define notation.
-We restrict ourselves to evidence of a binary nature (either it was observed or not) since continuous evidence would lead to some quite involved derivations.
+To avoid unnessesary technicality, we restrict ourselves to evidence of a binary nature. <!-- I am not shure if this is good. Even in NHS, there is no "binary evidence". In fact, I can't think of any example except for a single coinflip. Perhaps you mean non-randomized statistical tests. -->
 We denote the probability of a hypothesis before observing evidence as $P(H)$ and its complement as $P(¬H) = 1 - P(H)$.
 The probability of observing evidence under some hypothesis is $P(E|H)$.
 We can calculate the probability of the hypothesis after observing the evidence with the help of the Bayes formula:
@@ -120,13 +99,12 @@ We can calculate the probability of the hypothesis after observing the evidence 
 P(H|E) = \frac{P(H)P(E|H)}{P(E)} (\#eq:bayes)
 \end{equation}
 
-The posterior probability ($P(H|E)$) is of great relevance since it is often used directly or indirectly as a measure of corroboration of a hypothesis.
-In the tradition of Carnap (XXX), in its direct use, it is called corroboration as firmness; in its relation to the a priori probability ($P(H)$), it is called increase in firmness.
-We refrain from discussing specific measures of corroboration since no measure shows universally better properties than others.
-However, it is generally expected that any measure of corroboration increases monotonically with an increase in posterior probability ($P(H|E)$).
+The posterior probability $P(H|E)$ is of great relevance since it is often used directly or indirectly as a measure of corroboration of a hypothesis.
+In the tradition of Carnap (XXX), in its direct use, it is called corroboration as firmness; in its relation to the a priori probability $P(H)$, it is called increase in firmness.
+We do not discuss specific measures of corroboration since it is generally expected that any measure of corroboration increases monotonically with an increase in the posterior probability $P(H|E)$. <!-- citation missing -->
 
-In short, we want to increase posterior probability ($P(H|E)$).
-Increases in posterior probability ($P(H|E)$) are associated with increased epistemic value, for which we want to maximize the expectation.
+In short, we want to increase the posterior probability $P(H|E)$.
+Increases in the posterior probability $P(H|E)$ are associated with increased epistemic value, for which we want to maximize the expectation. <!-- very complicated sentence -->
 So how can we increase posterior probability?
 The Bayes formula yields three components that influence corroboration, namely $P(H)$, $P(E|H)$ and $P(E)$.
 The first option leads us to the unsurprising conclusion that higher a priori probability ($P(H)$) leads to higher posterior probability ($P(H|E)$).
@@ -140,11 +118,10 @@ When applied strictly within the bounds of null hypothesis testing, detectabilit
 However, while detectability is of great importance for study design, it is not directly relevant to the objective of preregistration.
 Thus, $P(E)$ remains to be considered.
 Since $P(E)$ is the denominator, increasing it will decrease the posterior probability: The more unlikely it is to observe evidence, the more it increases the probability of the hypothesis if we do observe it.
-In other words, high risk, high reward.
 
-If we equate riskiness with a low probability of obtaining evidence, the Bayesian rationale perfectly aligns with the observation that risky predictions lead to persuasive evidence.
+If we equate riskiness with a low probability of obtaining evidence, the Bayesian rationale perfectly aligns with the observation that risky predictions lead to persuasive evidence. <!-- I believe this is the wrong conceptualization. Riskiness refers to the probability of obtaining the evidence given the Hypothesis is false, not to the total probability of the evidence. I would swap Eq. 1 for a version that already entails Eq. 2 -->
 This tension between high risk leading to high reward is central to our consideration of preregistration.
-A high-risk, high-reward strategy is bound to result in many losses that are eventually absorbed by the high gains.
+A high-risk, high-reward strategy is bound to result in many losses that are eventually absorbed by the high gains. <!-- I think this is not true. A high-risk strategy means conducting studies where it is unlikely to observe the evidence, given the hypothesis is wrong. However, if the hypothesis is true, and P(E|H) = 1, there are no losses, even in risky studies. -->
 Sustaining many "failed" studies is not exactly aligned with the incentive structure under which many, if not most, researchers operate.
 Consequently, researchers have an incentive to appear to take more risks than they actually do, which misleads their readers to give their claims more credence than they deserve.
 It is at this juncture that the practice and mispractice of preregistration comes into play.
