--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -34,7 +34,7 @@ options(
 )
 ```
 
-A successful prediction should lend more credibility to a theory than a "postdiction," everything else being equal.
+A theory able to generate successful prediction should be more credible than a theory build around the facts afterwards.
 The scientific community has long pondered the vital distinction between exploration and confirmation, discovery and justification, hypothesis-generating and hypothesis-testing and so forth [@hoyningen-hueneContextDiscoveryContext2006; @shmueliExplainPredict2010].
 Confusing exploratory findings with confirmed theories has led to a crisis of confidence in the results of empirical sciences [@ioannidisWhyMostPublished2005], and psychology in particular [@opensciencecollaborationEstimatingReproducibilityPsychological2015].
 As a response, more and more researchers preregister their studies [@nosekPreregistrationRevolution2018] to honor this distinction and produce results that are considered confirmatory.
