--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -14,6 +14,23 @@ papersize: a4
 bibliography: references.bib
 abstract: "`r paste0(c('\\\\noindent', readLines('abstract.md')), collapse = ' ')`"
 csl: apa.csl
+repro:
+  files: abstract.md
+  packages:
+    - tidyverse
+    - ggplot2
+    - ggthemes
+    - patchwork
+    - tikzDevice
+  tlmgr:
+    - pgf
+    - preview
+    - libertine
+  apt:
+    - git
+    - rsync
+    - curl
+    - inkscape
 ---
 
 ```{r, include = FALSE}
@@ -39,27 +56,27 @@ The scientific community has long pondered the vital distinction between explora
 Confusing exploratory findings with confirmed theories has led to a crisis of confidence in the results of empirical sciences [@ioannidisWhyMostPublished2005], and psychology in particular [@opensciencecollaborationEstimatingReproducibilityPsychological2015].
 As a response, more and more researchers preregister their studies [@nosekPreregistrationRevolution2018] to honor this distinction and produce results that are considered confirmatory.
 
-Indeed, rigorous application of preregistration prevents researchers from reporting a simple confirmatory story for a set of results produced by an arduous process of trial and error [@wagenmakersAgendaPurelyConfirmatory2012].
+Indeed, rigorous application of preregistration prevents researchers from reporting a set of results produced by an arduous process of trial and error as a simple confirmatory story [@wagenmakersAgendaPurelyConfirmatory2012].
 However, while many researchers intuitively recognize this as an advantage of preregistration, some remain unconvinced.
 These skeptics question why a study should be preregistered at all.
 Even researchers convinced of the advantages of preregistration face difficult problems when they exclusively rely on an intuitive appeal.
 Specifically, an intuitive conviction is unable to address pragmatic questions, such as what to include in the preregistration and how detailed this information should be, or about the conditions that warrant deviations.
-If the research community remains confused about the purpose of preregistration, it is bound to misapply it and hence decrease the efficiency of the scientific endeavor. 
+If the research community remains confused about the purpose of preregistration, it is bound to misapply it and waste resources on writing preregistrations that do not address the underlying problem.
 We thus propose a principled justification for preregistration with a formal objective against which researchers can evaluate several pragmatic trade-offs.
 
 The scientific community asserts that the objective of preregistration is to distinguish confirmatory from exploratory research [@mellorEasyPreregistrationWill2018; @nosekPreregistrationRevolution2018; @wagenmakersAgendaPurelyConfirmatory2012].
-Taken at face value, this objective implies that research is confirmatory if, and only if, it is preregistered.
-However, this postulate is not warranted.
-Researchers can conduct confirmatory research without preregistration, though it might be difficult to convince other researchers of the confirmatory nature of their research.
+However, it is not principally warranted to suggest a close coupling of the categories preregistered vs. non-preregistered and confirmatory vs. exploratory research.
+In fact, researchers can conduct confirmatory research without preregistration (though it might be difficult to convince other researchers of the confirmatory nature of their research).
 The exact opposite, preregistered but not strictly confirmatory studies, are also commonplace [@dwanSystematicReviewEmpirical2008; @chanEmpiricalEvidenceSelective2004; @silagyPublishingProtocolsSystematic2002].
-Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations.
-One strategy is to write a loose preregistration to begin with [@stefanBigLittleLies2022]; another is to deviate from the preregistration afterwards.
-Both strategies may be used with compelling scientific reasoning or with the self-serving intent of generating desirable results no matter what the nature of the phenomenon under study.
-Insisting on equating preregistration and confirmation has, hence, led to criticism that preregistration is actually harmful all things considered, and neither sufficient nor necessary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
+Researchers may apply two strategies to evade the self-imposed restrictions of preregistrations: writing a loose preregistration to begin with [@stefanBigLittleLies2022] or deviating from the preregistration afterwards.
+Both strategies may be used for sensible scientific reasons or with the self-serving intent of generating desirable results.
+Thus, insisting on equating preregistration and confirmation has led to criticism that, all things considered, preregistration is actually harmful, and neither sufficient nor necessary to establish confirmation [@szollosiPreregistrationWorthwhile2020; @phamPreregistrationNeitherSufficient2021]
 
-These issues arise from a fundamental confusion about the objective of preregistration.
-Researchers are bound to be confused when they delegate an important scientific judgment to a simple decision rule, that only takes into account the existence of a preregistration.
+These issues arise from a fundamental misunderstanding about the objective of preregistration.
+Researchers are bound to be misled when they delegate an important scientific judgment to a simple decision rule, that only takes into account the existence of a preregistration.
 Preregistering an inherently exploratory analysis (like testing dozens of relations) does not make it confirmatory, nor will a carefully conducted confirmatory study become exploratory if the researcher deviates from the preregistration in minor details.
+To force preregistrations to generate results that are rightfully considered confirmatory additional restrictions on the types of analyses allowed have to be imposed.
+First, the analysis must have a low type-I error rate. second, 
 Equating confirmatory research with preregistered research is only possible for studies that expect a low type-I error rate and will run/be analyzed without in any case [@simmonsPreregistrationWhyHow2021; @bakkerEnsuringQualitySpecificity2020].
 Under these conditions, the rule holds, but such restricted use makes preregistration a niche solution unable to match the greater problem of lacking replicability in psychology and elsewhere.
 
