--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -376,7 +376,7 @@ $P(H)$, $P(¬H)$, $P(E|H)$, are already ruled out.
 ---
 ## $P(E|¬H)$
 
-The probability of finding evidence, even tough the theory does not hold.
+The probability of finding evidence, even though the theory does not hold.
 
 ---
 class: center, middle, inverse
