--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -416,6 +416,23 @@ class: center, middle, inverse
 # Theorethical Risk
 
 ---
+
+Related concepts
+
+---
+
+## Theoretical risk > $\alpha$-error
+
+---
+
+## Researchers' degrees of freedom > theoretical risk
+
+---
+class: center, middle, inverse
+
+# Effect
+
+---
 name: theoretical-risk-plot
 
 ```{r}
@@ -441,19 +458,34 @@ results %>%
        caption = "P(E|H) = .8, P(H) = .1") +
   NULL
 ```
+
 ---
 
 ### So maximize theoretical risk?
 
+--
+
+# No
+--
+, not necessarily
+
 ---
 
-### ~~So maximize theoretical risk?~~
+## Theories determin theorethical risk
 
-### So minimize researcher degrees of freedome?
+---
+
+## Resources limit $P(E|H)$
+
+---
+
+Maximizing theoretical risk / minimize researchers degrees of freedom is 
+
+# unsustainible
 
 --
 
-## Not nessesarily.
+Other ideas?
 
 ---
 class: center, middle, inverse
@@ -485,6 +517,62 @@ plots[["Posterior Probability"]] +
 ```
 
 ---
+
+.large[**Preregistrations**] reduce .large[**uncertainty**] about .large[**theoretical risk**].
+
+---
 template: qrcode
 
 ---
+
+### One further idea
+
+---
+
+# Preregistration as Code
+
+### version control + dynamic documents
+
+---
+class: center
+
+.pull-left[
+
+### Standard Preregistration
+
+hunches
+
+↓
+
+preregistration
+
+↓
+
+data
+
+↓
+
+article draft
+]
+
+.pull-right[
+### Preregistration as Code
+
+simulated data
+
+↓
+
+article draft with mock results
+
+↓
+
+data
+
+↓
+
+article draft with real results
+
+]
+
+---
+template: qrcode
