add tradeoff idea

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -471,11 +471,19 @@ results %>%
 
 ---
 
-## Theories determin theorethical risk
+## Theories determin $P(E|¬H)$ (theorethical risk)
 
 ---
 
-## Resources limit $P(E|H)$
+## Resources limit $P(E|H)$ (detectability)
+
+---
+
+## $P(E|H) \gg P(E|¬H)$
+
+## detectability $\gg$ theorethical risk
+
+*(statistical relevancy)*
 
 ---
 
@@ -490,7 +498,7 @@ Other ideas?
 ---
 class: center, middle, inverse
 
-# .blurry[Uncertain]
+# .blurry[Uncertainty]
 
 ---
 template: theoretical-risk-plot
